@@ -1,10 +1,12 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/clvm/Attic/clvm-2.00.33.ebuild,v 1.1 2005/03/25 02:32:08 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/clvm/Attic/clvm-2.00.33.ebuild,v 1.2 2005/03/25 11:51:20 swegener Exp $
+
+MY_P="${PN/clvm/LVM2}.${PV}"
 
 DESCRIPTION="User-land utilities for clvm (device-mapper) software."
 HOMEPAGE="http://sources.redhat.com/lvm2/"
-SRC_URI="ftp://sources.redhat.com/pub/lvm2/${PN/clvm/LVM2}.${PV}.tgz"
+SRC_URI="ftp://sources.redhat.com/pub/lvm2/${MY_P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -13,21 +15,19 @@ IUSE="readline nolvmstatic nocman "
 
 DEPEND=">=sys-fs/device-mapper-1.00.17
 	!nocman? ( =sys-cluster/cman-1.0_pre31 )
-	nocman? ( =sys-cluster/gulm-1.0_pre25 )
-	"
+	nocman? ( =sys-cluster/gulm-1.0_pre25 )"
 
 RDEPEND="${DEPEND}
 	!sys-fs/lvm-user
-	!lvm2
-	"
+	!sys-fs/lvm2"
 
-S="${WORKDIR}/${PN/clvm/LVM2}.${PV}"
+S="${WORKDIR}/${MY_P}"
 
 src_compile() {
 	# Static compile of lvm2 so that the install described in the handbook works
 	# http://www.gentoo.org/doc/en/lvm2.xml
 	# fixes http://bugs.gentoo.org/show_bug.cgi?id=84463
-	local myconf
+	local myconf=""
 	use nolvmstatic || myconf="$(use_enable static_link)"
 	if use nocman; then
 		myconf="${myconf} --with-clvmd=gulm"
@@ -52,6 +52,5 @@ src_install() {
 	newins ${FILESDIR}/lvm2-start.sh lvm-start.sh
 	newins ${FILESDIR}/lvm2-stop.sh lvm-stop.sh
 
-	exeinto /etc/init.d/
-	newins ${FILESDIR}/clvmd.rc clvmd || die
+	newinitd ${FILESDIR}/clvmd.rc clvmd || die
 }
